--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.9.2",
+    "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.54.0",
+    "eslint-plugin-vitest-globals": "^1.4.0",
     "typescript": "^5.3.2",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6"
